--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,18 +1,18 @@
 <app-navbar></app-navbar>
 <div class="container">
     <div id="div-login">
-        <p id="title">Inizia a <span>giocare</span>, accedi al sito!</p>
+        <p id="title"> {{ 'start' | translate }} <span>{{ 'playing' | translate }}</span> {{ 'log_in_to_site' | translate }}</p>
         <form (ngSubmit)="onLogin()">
             <div id="div-form">
                 <label for="username">Username</label>
-                <input type="text" id="username" name="username" placeholder="Inserisci il tuo username" maxlength="50" required [(ngModel)]="username">
+                <input type="text" id="username" name="username" placeholder="{{ 'placeholders.enter_username' | translate }}" maxlength="50" required [(ngModel)]="username">
             </div>
             <div id="div-form">
                 <label for="password">Password</label>
-                <input type="password" id="password" name="password" placeholder="Inserisci la tua password" maxlength="50"  required  [(ngModel)]="password">
+                <input type="password" id="password" name="password" placeholder="{{ 'placeholders.enter_password' | translate }}"  maxlength="50"  required  [(ngModel)]="password">
             </div>
-            <button type="submit" class="btn-login">Accedi</button>
+            <button type="submit" class="btn-login">{{ 'login' | translate }}</button>
         </form>
-        <p class="register-link">Non sei ancora registrato? <a href="/register">Clicca qui</a></p>
+        <p class="register-link">{{ 'not_registered_yet' | translate }} <a href="/register">{{ 'click_here' | translate }}</a></p>
     </div>
 </div>
