--- a/frontend/src/app/components/not-found/not-found.component.html
+++ b/frontend/src/app/components/not-found/not-found.component.html
@@ -1,4 +1,4 @@
 <div>
-    <h2>Errore 404: Pagina non trovata</h2>
-    <p>La pagina che stai cercando non esiste.</p>
+    <h2>{{ 'error_404' | translate }}</h2>
+    <p>{{ 'page_not_found' | translate }}</p>
   </div>
