--- a/frontend/src/app/components/form-multiple-choice/form-multiple-choice.component.html
+++ b/frontend/src/app/components/form-multiple-choice/form-multiple-choice.component.html
@@ -2,30 +2,30 @@
 <div class="container" *ngIf="!isInTextEditMode">
     <div class="div-multiple-choice">
         <div class="div-title">
-            <p id="title">Inserisci i <span>dati</span> della <span>scelta multipla</span></p>
+            <p id="title">{{ 'enter_the' | translate }} <span>{{ 'data' | translate }}</span> {{ 'of_the' | translate }} <span>{{ 'multiple_choice' | translate }} </span></p>
         </div>
         <div class="div-form">
             <form (ngSubmit)="onSubmit()">
                 <div class="single-form">
-                    <label for="testo">Testo<span>*</span></label>
+                    <label for="testo">{{ 'text' | translate }}<span>*</span></label>
                     <textarea id="testo" name="testo" maxlength="50" required [(ngModel)]="testo"></textarea>
                 </div>
                 <div class="single-form">
-                    <label for="idScenarioSuccessivo">Scenario successivo alla risposta<span>*</span></label>
+                    <label for="idScenarioSuccessivo">{{ 'next_scenario_after_response' | translate }}<span>*</span></label>
                     <select id="idScenarioSuccessivo" name="idScenarioSuccessivo" required [(ngModel)]="idScenarioSuccessivo">
-                        <option disabled>Scenario successivo alla risposta</option>
+                        <option disabled>{{ 'next_scenario_after_response' | translate }}</option>
                         <option *ngFor="let scenario of storyScenarios" [value]="scenario.id">{{ scenario.testo }}</option>
                     </select>
                 </div>
                 <div class="single-form">
-                    <label for="objectSelect">Oggetto richiesto</label>
+                    <label for="objectSelect">{{ 'required_item' | translate }}</label>
                     <select id="objectSelect" name="objectSelect" [(ngModel)]="selectedObjectId">
-                        <option disabled>Oggetto richiesto</option>
+                        <option disabled>{{ 'required_item' | translate }}</option>
                         <option [value] = "-1">---</option>
                         <option *ngFor="let obj of storyObjects" [value]="obj.id">{{ obj.nome }}</option>
                     </select>
                 </div>    
-                <button type="submit">Crea</button>
+                <button type="submit">{{ 'create' | translate }}</button>
             </form>
         </div>
     </div>
@@ -34,19 +34,19 @@
 <div class="container" *ngIf="isInTextEditMode">
     <div class="div-multiple-choice">
         <div class="div-title">
-            <p id="title">Aggiorna i <span>dati</span> della <span>scelta multipla</span></p>
+            <p id="title">{{ 'update_the' | translate }} <span>{{ 'data' | translate }}</span> {{ 'of_the' | translate }} <span>{{ 'multiple_choice' | translate }}</span></p>
         </div>
         <div class="div-form">
             <form class="multiple-choice-form" (ngSubmit)="updateMultipleChoicheText()">
                 <div class="single-form">
-                    <label for="testo">Testo</label>
+                    <label for="testo">{{ 'text' | translate }}</label>
                     <textarea *ngIf="currentMultipleChoiche" id="testo" name="testo" maxlength="50" required [ngModel]="currentMultipleChoiche.testo" (ngModelChange)="onTextChange($event)"></textarea>  
                 </div>
                 <div class="single-form">
-                    <label for="idScenarioSuccessivo">Testo Scenario Successivo</label>
+                    <label for="idScenarioSuccessivo">{{ 'next_scenario_text' | translate }}  </label>
                     <input type="text" [value]="currentScenarioText" readonly>
                 </div>
-            <button type="submit" class="btn-creazione" [disabled]="isUpdated()">Aggiorna</button>
+            <button type="submit" class="btn-creazione" [disabled]="isUpdated()">{{ 'update' | translate }}</button>
             </form>
         </div>
     </div>
