--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -9,55 +9,52 @@
                 </button>
             </div>
         </div>
+        
         <div class="div-button">
+            <app-language-selector></app-language-selector>
             <!-- Mostra questi pulsanti solo se l'utente NON è autenticato -->
-            <button mat-button routerLink="/login" *ngIf="!isAuthenticated()">Accedi</button>
-            <button mat-button routerLink="/register" *ngIf="!isAuthenticated()">Registrati</button>
+            <button mat-button routerLink="/login" *ngIf="!isAuthenticated()">{{ 'login' | translate }}</button>
+            <button mat-button routerLink="/register" *ngIf="!isAuthenticated()">{{ 'register' | translate }}</button>
 
             <!-- Mostra il bottone "Paga" solo se showPaymentButton è true -->
-            <button mat-button routerLink="/payment" *ngIf="currentUrl === '/storJPage' && showPaymentButton">Paga</button>
+            <button mat-button routerLink="/payment" *ngIf="currentUrl === '/storJPage' && showPaymentButton">{{ 'pay' | translate }}</button>
 
             <!-- Mostra il bottone "Crea Scenario" solo se l'utente è su "/createStory" -->
             <button mat-button *ngIf="currentUrl === '/createStory' && isAuthenticated() && !isInTextEditMode"
-                (click)="saveStory()">Salva
-                Storia</button>
+                (click)="saveStory()">{{ 'save_story' | translate }} </button>
             <button mat-button routerLink="/formScenario"
-                *ngIf="currentUrl === '/createStory' && isAuthenticated() && !isInTextEditMode">Crea
-                Scenario</button>
+                *ngIf="currentUrl === '/createStory' && isAuthenticated() && !isInTextEditMode">{{ 'create_scenario' | translate }}</button>
             <button mat-button routerLink="/storyObjects"
-                *ngIf="currentUrl === '/createStory' && isAuthenticated()">Oggetti</button>
+                *ngIf="currentUrl === '/createStory' && isAuthenticated()">{{ 'objects' | translate }}</button>
 
             <!-- Mostra il bottone "Crea oggetto" solo se l'utente è su "/storyObjects" -->
             <button mat-button routerLink="/formStoryObject"
-                *ngIf="currentUrl === '/storyObjects' && isAuthenticated() && !isInTextEditMode">Crea Oggetto</button>
+                *ngIf="currentUrl === '/storyObjects' && isAuthenticated() && !isInTextEditMode">{{ 'create_object' | translate }}</button>
 
             <!-- Mostra questo pulsante solo se l'utente è autenticato e ha effettuato il pagamento -->
             <button mat-button routerLink="/handlerPlaypage"
-                *ngIf="currentUrl === '/storJPage' &&  isAuthenticated() && !showPaymentButton">Gioca</button>
+                *ngIf="currentUrl === '/storJPage' &&  isAuthenticated() && !showPaymentButton">{{ 'play' | translate }}</button>
 
             <button mat-button routerLink="/homeStories"
-                *ngIf="currentUrl === '/storJPage' && isAuthenticated()">Crea</button>
+                *ngIf="currentUrl === '/storJPage' && isAuthenticated()">{{ 'create' | translate }}</button>
 
             <!-- Mostra questo pulsante solo se l'utente si trova in homestories -->
-            <button mat-button routerLink="/formStory" *ngIf="currentUrl === '/homeStories' && isAuthenticated()">Crea
-                storia</button>
+            <button mat-button routerLink="/formStory" *ngIf="currentUrl === '/homeStories' && isAuthenticated()">{{ 'create_story' | translate }}</button>
 
             <!-- Mostra questo pulsante solo se l'utente si trova in formMultipleChoice -->
             <button mat-button routerLink="/formMultipleChoice"
-                *ngIf="currentUrl === '/multiplechoice' && isAuthenticated() && !isInTextEditMode">Crea scelta</button>
+                *ngIf="currentUrl === '/multiplechoice' && isAuthenticated() && !isInTextEditMode">{{ 'create_choice' | translate }}</button>
 
             <!-- Mostra questo pulsante solo se l'utente si trova in formSingleChoice -->
             <button mat-button routerLink="/formSingleChoice"
-                *ngIf="currentUrl === '/singlechoice' && isAuthenticated() && !getIsSingleChoiceCreated() && !isInTextEditMode">Crea
-                scelta</button>
+                *ngIf="currentUrl === '/singlechoice' && isAuthenticated() && !getIsSingleChoiceCreated() && !isInTextEditMode">{{ 'create_choice' | translate }}</button>
 
             <!-- Mostra questo pulsante solo se l'utente si trova in formSingleChoice -->
-            <button mat-button routerLink="/match" *ngIf="currentUrl === '/handlerPlaypage' && isAuthenticated()">Mie
-                Partite</button>
+            <button mat-button routerLink="/match" *ngIf="currentUrl === '/handlerPlaypage' && isAuthenticated()">{{ 'my_games' | translate }} </button>
 
             <!-- Mostra questo pulsante solo se l'utente si trova in playPage -->
             <button mat-button (click)="openInventory()"
-                *ngIf="isAuthenticated() && currentUrl === '/playPage'">Inventario</button>
+                *ngIf="isAuthenticated() && currentUrl === '/playPage'">{{ 'inventory' | translate }}</button>
 
             <button mat-button (click)="logout()" *ngIf="isAuthenticated() && currentUrl != '/payment' && currentUrl != '/formStory' && currentUrl != '/formScenario' && currentUrl != '/formStoryObject' && currentUrl != '/formSingleChoice' && currentUrl != '/formMultipleChoice'">Logout</button>
         </div>
